Agentforce/force-app/main/default/objects/ScratchOrgRequestEvent__e/ScratchOrgRequestEvent__e.object-meta.xml
<CustomObject>
    <label>ScratchOrgRequestEvent</label>
    <pluralLabel>ScratchOrgRequestEvents</pluralLabel>
</CustomObject>