Agentforce/force-app/main/default/objects/ScratchOrgRequestEvent__e/fields/definitionFilePath__c.field-meta.xml
<CustomField>
    <fullName>definitionFilePath__c</fullName>
    <label>definitionFilePath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>