Agentforce/force-app/main/default/objects/ScratchOrgRequestEvent__e/fields/durationDays__c.field-meta.xml
<CustomField>
    <fullName>durationDays__c</fullName>
    <label>durationDays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>