Agentforce/force-app/main/default/objects/ScratchOrgRequestEvent__e/fields/orgAlias__c.field-meta.xml
<CustomField>
    <fullName>orgAlias__c</fullName>
    <label>orgAlias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>